may/src/parser/tests/snapshots/may__parser__tests__let___val_is_let.snap
---
source: may/src/parser/tests/let_.rs
expression: cst
---
Let(
    Let {
        letkw: ByteIndex(
            1,
        ),
        name: Ident {
            value: "three",
            start: ByteIndex(
                5,
            ),
        },
        val: Let(
            Let {
                letkw: ByteIndex(
                    17,
                ),
                name: Ident {
                    value: "two",
                    start: ByteIndex(
                        21,
                    ),
                },
                val: VarOrApp(
                    App(
                        App {
                            callee: Var(
                                Ident {
                                    value: "succ",
                                    start: ByteIndex(
                                        27,
                                    ),
                                },
                            ),
                            lparen: ByteIndex(
                                31,
                            ),
                            args: One(
                                VarOrApp(
                                    Var(
                                        Ident {
                                            value: "one",
                                            start: ByteIndex(
                                                32,
                                            ),
                                        },
                                    ),
                                ),
                            ),
                            trailing_comma: None,
                            rparen: ByteIndex(
                                35,
                            ),
                        },
                    ),
                ),
                next_val: VarOrApp(
                    App(
                        App {
                            callee: Var(
                                Ident {
                                    value: "succ",
                                    start: ByteIndex(
                                        41,
                                    ),
                                },
                            ),
                            lparen: ByteIndex(
                                45,
                            ),
                            args: One(
                                VarOrApp(
                                    Var(
                                        Ident {
                                            value: "two",
                                            start: ByteIndex(
                                                46,
                                            ),
                                        },
                                    ),
                                ),
                            ),
                            trailing_comma: None,
                            rparen: ByteIndex(
                                49,
                            ),
                        },
                    ),
                ),
            },
        ),
        next_val: VarOrApp(
            App(
                App {
                    callee: Var(
                        Ident {
                            value: "add",
                            start: ByteIndex(
                                52,
                            ),
                        },
                    ),
                    lparen: ByteIndex(
                        55,
                    ),
                    args: Snoc(
                        One(
                            VarOrApp(
                                Var(
                                    Ident {
                                        value: "three",
                                        start: ByteIndex(
                                            56,
                                        ),
                                    },
                                ),
                            ),
                        ),
                        VarOrApp(
                            Var(
                                Ident {
                                    value: "three",
                                    start: ByteIndex(
                                        63,
                                    ),
                                },
                            ),
                        ),
                    ),
                    trailing_comma: None,
                    rparen: ByteIndex(
                        68,
                    ),
                },
            ),
        ),
    },
)
